         add support for saving interface 2 cart in .szx snapshots.
20040521 szx.c: remove warnings.
20040521 szx.c: save RAM page 8 for the Spectrum SE.
20040521 sna.c,z80.c: allow SE (sna/z80) and Scorpion (z80) snapshots to
	 be (badly) saved.
20040525 accessor.pl,sna.c,snap_accessors.txt,szx.c,z80.c: add support for
         saving Timex Dock/Exrom information in .szx snapshots.
20040525 szx.c: Timex Dock/Exrom pages aren't 0x4000 bytes long.
20040526 accessor.pl,internals.h,snapshot.c,szx.c: tidy up snapshot
	 alloc/free routines.
20040527 timings.c: small timing tweak for 128K machines; we now match
	 the timines for (at least some!) 48K/128K machines.
20040527 szx.c: Write scld block when machine has SE memory capability.
20040601 libspectrum.c,libspectrum.h.in: Add LIBSPECTRUM_CLASS_CARTRIDGE_IF2
         and LIBSPECTRUM_ID_CARTRIDGE_IF2.
20040601 szx.c: save/restore state of ZXCF upload jumper.
20040602 accessor.pl,internals.h,sna.c,snap_accessors.txt,snapshot.c,
	 szx.c,z80.c: save/restore ZXATASP state in .szx snaps.
20040603 Makefile.am,myglib/{.cvsignore,Makefile.am}: build the glib
	 replacement as PIC.
20040611 szx.c: skip those chunks we don't support.
20040611 szx.c: small changes to the ZXAT and ZXCF chunks to make them
	 more consistent with how the rest of the .szx format does things.
20040612 acconfig.h,configure.in: remove use of acconfig.h
20040612 szx.c: remove duplicated literal constants from the code.
20040620 README,autogen.sh: add script to do the autotools invocation.
20040620 hacking/cvs-tags: remove (use doc/cvs-tags instead).
20040621 z80.c: remove literal machine constants.
20040621 z80.c: allow the extensions to the .z80 machine type be valid
	 for both v2 and v3 files.
20040626 libspectrum.h.in: put libspectrum_tape_block_description in the
	 correct place.
20040626 Makefile.am: bump soname.
20040626 AUTHORS,README,TODO,doc/{libspectrum.3,libspectrum.txt}: doc
	 updates in preparation for a 0.2.2 release.